ready to roll back

--- a/_wrapper/Makefile
+++ b/_wrapper/Makefile
@@ -76,6 +76,7 @@ install_dynamic : header library
 	$(CP) $(BINDIR)/$(LIBHEADER)$(HEADEREXTENSION) $(HEADINST)/$(LIBHEADER)$(HEADEREXTENSION)
 	$(CP) $(BINDIR)/$(LIBRARY)$(LIBRARYEXTENSION) $(LIBINST)/$(LIBRARY)$(LIBRARYEXTENSION).$(MAJORVERSION).$(MINORVERSION)
 	$(CH) $(HEADINST)/$(HEADERFILE)$(HEADEREXTENSION)
+	$(CH) $(HEADINST)/$(LIBHEADER)$(HEADEREXTENSION)
 	$(CH) $(LIBINST)/$(LIBRARY)$(LIBRARYEXTENSION).$(MAJORVERSION).$(MINORVERSION)
 	$(LD) -l $(LIBINST)/$(LIBRARY)$(LIBRARYEXTENSION).$(MAJORVERSION).$(MINORVERSION)
 	$(LN) $(LIBINST)/$(LIBRARY)$(LIBRARYEXTENSION).$(MAJORVERSION) $(LIBINST)/$(LIBRARY)$(LIBRARYEXTENSION)
